- Removed the checkUrl from TokenCredentials jelly form and updated the pom file.